--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <version>1.5.5.RELEASE</version>
     </parent>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- Spring dependencies -->
         <dependency>
@@ -53,6 +60,14 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.16.1</version>
         </dependency>
+
+        <!-- ML dependencies -->
+        <dependency>
+            <groupId>com.github.sanity</groupId>
+            <artifactId>quickml</artifactId>
+            <version>10.16</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
