--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>quickml</artifactId>
             <version>10.16</version>
         </dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+
 
     </dependencies>
 
